# cognigy-vibe

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  README.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/: CODEOWNERS
cli/: package.json
cognigy-mcp/: Dockerfile  README.md  pyproject.toml  railway.toml
cognigy-mcp/cognigy_mcp/: api.py  cache.py  config.py  filters.py  launcher.py  orchestrator.py  reconcile.py  server.py  server_http.py  session.py  setup.py  state.py  validation.py  wizard_ui.py
cognigy-mcp/cognigy_mcp/tools/: _explain_topics_generated.py  dev_tools.py  explain.py  file_push.py  flow_ops.py  init_tool.py  state_tools.py  testing.py  voice_ops.py
cognigy-mcp/docs/superpowers/plans/: 2026-07-07-pydantic-validation.md
cognigy-mcp/docs/superpowers/specs/: 2026-07-07-pydantic-validation-design.md
cognigy-mcp/tests/: test_api.py  test_cache.py  test_filters.py  test_inner_server_integration.py  test_launcher.py  test_orchestrator.py  test_reconcile.py  test_server.py  test_server_http.py  test_session.py  test_setup.py  test_state.py  test_state_config_base.py  test_validation.py  test_wizard_ui.py
cognigy-mcp/tests/tools/: test_explain.py  test_explain_dev.py  test_file_push.py  test_flow_ops.py  test_init_tool.py  test_state_tools.py  test_testing.py  test_voice_ops.py
cognigy-vibe-mcp/: .gitignore  README.md  pyproject.toml
docs/: agent-prompting-guide.md  architecture.md  cognigy-agent-patterns.md  cognigy-api-reference.md  cognigy-code-conventions.md  (+3 more)
(+253 files in other folders)
