[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognigy-vibe-mcp"
version = "1.3.4"
description = "Cognigy AI agent demo builder MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cognigy-vibe-mcp = "cognigy_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cognigy_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
