[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognigy-vibe-mcp"
version = "1.7.0"
description = "Cognigy AI agent demo builder MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "pydantic>=2.11.0",
    "httpx>=0.27.0,<1.0.0",
    "python-dotenv>=1.0.0",
    "truststore>=0.9.0",
    "tenacity>=8.0.0,<10.0.0",
]

[project.scripts]
cognigy-vibe-mcp = "cognigy_mcp.orchestrator:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cognigy_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
